...
                          'top-controls-progress-chip',
                        ),
                        onPressed: onProgressPressed,
                        label: Text(UiStrings.topControlsProgress(context)),
                      )
                    : ActionChip(
                        key: const ValueKey<String>('top-controls-help-chip'),
                        onPressed: onHelpPressed,
                        label: Text(UiStrings.topControlsHelp(context)),
                      ),
              ),
            ],
          ),
...
