...
                      longPressMessage: musicControlsTooltip,
                    ),
                    const SizedBox(width: 20),
                  ],
                  Builder(
                    builder: (context) => IconButton(
                      key: const ValueKey<String>('appbar-menu-button'),
                      onPressed: () => Scaffold.of(context).openDrawer(),
                      icon: const Icon(Icons.menu),
                      tooltip: UiStrings.appBarMenuTooltip(context),
                    ),
                  ),
                ],
...
